--- a/css/fancy-robot.css
+++ b/css/fancy-robot.css
@@ -1,7 +1,13 @@
 .robot-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .robot-face-shape {
+  height: 500px;
+  width: 600px;
+  border: 20px solid purple;
 }
 
 .robot-eye-left {
@@ -14,6 +20,11 @@
 }
 
 .robot-ear-right {
+  width: 0;
+  height: 0;
+  border-top: 50px solid transparent;
+  border-right: 100px solid red;
+  border-bottom: 50px solid transparent;
 }
 
 .robot-nose {
