--- a/css/fancy-robot.css
+++ b/css/fancy-robot.css
@@ -1,39 +1,108 @@
 .robot-container {
+  flex-wrap: wrap;
+  height: 100vh;
+  width: 100vw;
   display: flex;
-  align-items: center;
+  align-content: center;
   justify-content: center;
 }
 
 .robot-face-shape {
+  /* position: relative; */
   height: 500px;
   width: 600px;
+  border-radius: 10%;
   border: 20px solid purple;
 }
 
 .robot-eye-left {
+  position: relative;
+  top: 50px;
+  left: 50px;
+  height: 100px;
+  width: 150px;
+  background-image: url(https://picsum.photos/id/29/150/100);
+  border-radius: 50%;
 }
 
 .robot-eye-right {
+  position: relative;
+  left: 350px;
+  top: -50px;
+  --r: 20px; /* control the radius */
+
+  height: 100px;
+  aspect-ratio: 1.5;
+  padding: var(--r);
+  background: linear-gradient(purple, pink, blue);
+  mask: radial-gradient(50% 50%, #0000 66%, #000 67%) round var(--r) var(--r) /
+      calc(2 * var(--r)) calc(2 * var(--r)),
+    conic-gradient(#000 0 0) content-box;
 }
 
 .robot-ear-left {
+  position: relative;
+  top: 100px;
+  left: -620px;
+  height: 300px;
+  width: 0.7em;
+  background-color: blueviolet;
 }
 
 .robot-ear-right {
+  margin-top: 100px;
+  margin-left: 10px;
   width: 0;
   height: 0;
   border-top: 50px solid transparent;
-  border-right: 100px solid red;
+  border-right: 100px solid hotpink;
   border-bottom: 50px solid transparent;
 }
 
 .robot-nose {
+  position: relative;
+  left: 240px;
+  height: 12%;
+  width: 10%;
+  border-radius: 50%;
+  background: linear-gradient(to right, #fc5c7d, #6a82fb);
 }
 
 .robot-teeth {
+  position: relative;
+  top: 35px;
+  margin-left: 5px;
+  --s: 44px; /* size of the wave */
+  --b: 16px; /* thickness of the line */
+  --m: 0.4; /* curvature of the wave [0 2] */
+
+  background: #008c9e;
+  --R: calc(var(--s) * sqrt(var(--m) * var(--m) + 1) + var(--b) / 2);
+  height: calc(2 * var(--R));
+  width: 98%;
+  --_g: #0000 calc(99% - var(--b)), #000 calc(101% - var(--b)) 99%, #0000 101%;
+  mask: radial-gradient(
+        var(--R) at left 50% bottom calc(-1 * var(--m) * var(--s)),
+        var(--_g)
+      )
+      calc(50% - 2 * var(--s)) calc(50% - var(--s) / 2 - var(--b) / 2) /
+      calc(4 * var(--s)) calc(var(--s) + var(--b)) repeat-x,
+    radial-gradient(
+        var(--R) at left 50% top calc(-1 * var(--m) * var(--s)),
+        var(--_g)
+      )
+      50% calc(50% + var(--s) / 2 + var(--b) / 2) / calc(4 * var(--s))
+      calc(var(--s) + var(--b)) repeat-x;
 }
 
 .robot-tooth {
+  position: relative;
+  top: 10px;
+  left: 100px;
+  height: 30px;
+  width: 25px;
+  background: #f1bb0885;
+  mask: radial-gradient(#0000 71%, #000 72%) 10000% 10000%/99.5% 99.5%;
 }
 
 .robot-hair-style {
