--- a/css/fancy-robot.css
+++ b/css/fancy-robot.css
@@ -11,6 +11,7 @@
 .robot-face-shape {
   height: 500px;
   width: 600px;
+  margin-left: 88.82px;
   border-radius: 10%;
   border: 20px solid purple;
 }
@@ -41,18 +42,17 @@
 }
 
 .robot-ear-left {
-  position: absolute;
+  position: relative;
   top: 100px;
-  left: -620px;
+  right: 650px;
   height: 300px;
   width: 0.7em;
   background-color: blueviolet;
 }
 
 .robot-ear-right {
-  position: absolute;
-  top: ;
-  right: ;
+  position: relative;
+  top: 100px;
   width: 0;
   height: 0;
   border-top: 50px solid transparent;
@@ -98,7 +98,7 @@
 
 .robot-tooth {
   position: relative;
-  top: 10px;
+  top: 2.5px;
   left: 100px;
   height: 30px;
   width: 25px;
@@ -108,29 +108,57 @@
 
 .robot-hair-style {
   position: relative;
-  right: 450px;
-  bottom: 35px;
-  height: 30px;
-  width: 30px;
+  right: 430px;
+  bottom: 23px;
+  height: 20px;
+  width: 20px;
   background-color: palevioletred;
 }
 
 .robot-hair-one {
+  position: relative;
+  left: 28px;
+  top: -48px;
   height: 50px;
-  width: 5px;
+  width: 4px;
   background-color: brown;
   transform: rotate(30deg);
 }
 
 .robot-hair-two {
+  position: relative;
+  left: 9px;
+  top: -100px;
   height: 50px;
-  width: 5px;
+  width: 4px;
   background-color: brown;
 }
 
 .robot-hair-three {
+  position: relative;
+  left: -11px;
+  top: -148px;
   height: 50px;
-  width: 5px;
+  width: 4px;
   background-color: brown;
   transform: rotate(330deg);
+}
+
+.robot-hair-four {
+  position: relative;
+  left: 16px;
+  top: -200px;
+  height: 50px;
+  width: 4px;
+  background-color: brown;
+  transform: rotate(15deg);
+}
+
+.robot-hair-five {
+  position: relative;
+  top: -250px;
+  height: 50px;
+  width: 4px;
+  background-color: brown;
+  transform: rotate(345deg);
 }
