--- a/css/legal-page.css
+++ b/css/legal-page.css
@@ -1,4 +1,6 @@
 .legal-header {
+  position: sticky;
+  top: 60px;
   background-color: #e2e2e2;
   padding: 30px;
   margin-top: 60px;
@@ -26,6 +28,8 @@ section {
 }
 
 .section-label {
+  position: sticky;
+  top: 158px;
   width: 100%;
   background-color: #2b2d3b;
   height: max-content;
@@ -53,6 +57,8 @@ section {
 }
 
 footer {
+  position: sticky;
+  bottom: 1px;
   display: flex;
   align-items: center;
   width: 100%;
